force-app/main/default/objects/Benefit__c/fields/Benefit_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Account_Number__c</fullName>
    <label>Benefit Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>