force-app/main/default/objects/Benefit__c/fields/Benefit_Amount_Month__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Amount_Month__c</fullName>
    <inlineHelpText>Optional: enter dollar amount of benefit</inlineHelpText>
    <label>Benefit Amount/Month</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>