force-app/main/default/objects/Benefit__c/fields/Benefit_Status__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Status__c</fullName>
    <label>Benefit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Planning on Applying</fullName>
            </value>
            <value>
                <fullName>Applying</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>On Waiting List</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>