force-app/main/default/objects/Benefit__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <inlineHelpText>Choose from list of insurance and benefit types</inlineHelpText>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>MHMR</fullName>
            </value>
            <value>
                <fullName>Private health</fullName>
            </value>
            <value>
                <fullName>Section 8</fullName>
            </value>
            <value>
                <fullName>SNAP Benefits</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>SSDI</fullName>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs Benefits</fullName>
            </value>
            <value>
                <fullName>Wages</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>