force-app/main/default/objects/Benefit__c/fields/Benefit_Type_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type_Other_Details__c</fullName>
    <inlineHelpText>If benefit type is &quot;other,&quot; please specify.</inlineHelpText>
    <label>Benefit Type Other Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>