force-app/main/default/objects/Benefit__c/fields/Check_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Sent_Date__c</fullName>
    <label>Check Sent Date</label>
    <type>Date</type>
</CustomField>