force-app/main/default/objects/Benefit__c/fields/Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Date__c</fullName>
    <label>Contacted Date</label>
    <type>Date</type>
</CustomField>