force-app/main/default/objects/Benefit__c/fields/General_Benefit_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Benefit_Notes__c</fullName>
    <label>General Benefit Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>