force-app/main/default/objects/Benefit__c/fields/HCBS_Waiver_Type__c.field-meta.xml
<CustomField>
    <fullName>HCBS_Waiver_Type__c</fullName>
    <label>HCBS Waiver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HCBS_Options</valueSetName>
    </valueSet>
</CustomField>