force-app/main/default/objects/Benefit__c/fields/Long_Term_Medicaid_Type__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Medicaid_Type__c</fullName>
    <label>Long Term Medicaid Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFC (Community First Choice)</fullName>
            </value>
            <value>
                <fullName>DAHS (Day Activity and Health Services)</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>PHC (Primary Home Care)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>