force-app/main/default/objects/Benefit__c/fields/Medicaid_Buy_In__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Buy_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicaid Buy In</label>
    <type>Checkbox</type>
</CustomField>