force-app/main/default/objects/Benefit__c/fields/Medicaid_Waiver_Type__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Waiver_Type__c</fullName>
    <label>Medicaid Waiver/Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>CHIP</fullName>
            </value>
            <value>
                <fullName>CLASS</fullName>
            </value>
            <value>
                <fullName>DBMD</fullName>
            </value>
            <value>
                <fullName>HCS</fullName>
            </value>
            <value>
                <fullName>ICF-IDD</fullName>
            </value>
            <value>
                <fullName>MDCP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>QDWI</fullName>
            </value>
            <value>
                <fullName>QMB</fullName>
            </value>
            <value>
                <fullName>SLMB</fullName>
            </value>
            <value>
                <fullName>STAR</fullName>
            </value>
            <value>
                <fullName>STAR+PLUS/HCBS</fullName>
            </value>
            <value>
                <fullName>STAR HEALTH</fullName>
            </value>
            <value>
                <fullName>STAR KIDS</fullName>
            </value>
            <value>
                <fullName>STAR PLUS</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>TxHmL</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>