force-app/main/default/objects/Benefit__c/fields/Medicare_Savings_Program__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Savings_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicare Savings Program</label>
    <type>Checkbox</type>
</CustomField>