force-app/main/default/objects/Benefit__c/fields/Medicare_Savings_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Savings_Program_Type__c</fullName>
    <label>Medicare Savings Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medicare_Savings_Program_Type</valueSetName>
    </valueSet>
</CustomField>