force-app/main/default/objects/Benefit__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <inlineHelpText>Optional: enter insurance company name for this benefit, or other identifying information.</inlineHelpText>
    <label>Provider</label>
    <length>35</length>
    <type>Text</type>
</CustomField>