force-app/main/default/objects/Benefit__c/fields/Reply_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Reply_Received_Date__c</fullName>
    <label>Reply Received Date</label>
    <type>Date</type>
</CustomField>