force-app/main/default/objects/Benefit__c/fields/Return_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Receipt_Date__c</fullName>
    <label>Return Receipt Date</label>
    <type>Date</type>
</CustomField>