force-app/main/default/objects/Benefit__c/fields/SSA__c.field-meta.xml
<CustomField>
    <fullName>SSA__c</fullName>
    <label>SSA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAC</fullName>
            </value>
            <value>
                <fullName>Survivor Benefits</fullName>
            </value>
            <value>
                <fullName>RSDI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>