force-app/main/default/objects/Benefit__c/fields/X18_Digit_Benefit_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Benefit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Benefit ID</label>
    <type>Text</type>
</CustomField>