force-app/main/default/objects/Benefit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Benefit_Type__c</columns>
    <columns>Benefit_Status__c</columns>
    <columns>Benefit_Amount_Month__c</columns>
    <columns>Date_of_Review__c</columns>
    <columns>Provider__c</columns>
    <columns>Staff_Person__c</columns>
    <columns>Verification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>